Fix an overflow-x issue caused by the terminal

--- a/website/pages/home/HomePage.module.css
+++ b/website/pages/home/HomePage.module.css
@@ -1,4 +1,6 @@
 .homePage {
+  overflow-x: hidden;
+
   & .testingTerminal {
     position: absolute;
     top: 110px;
